Modernise codebase. parser package.